--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,7 @@
-html, body {
+html, body, div {
   width:  100%;
   height: 100%;
-  margin: 0px;
+  margin: 0;
+  padding:0;
   background-color: #66EEF4;
 }
